[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tpo-torch"
version = "0.1.0"
description = "Target Policy Optimization (TPO) — experimental RLHF implementation using cross-entropy with advantage-weighted target distributions"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Griffith-7" },
]
keywords = ["rlhf", "reinforcement-learning", "llm", "tpo", "policy-optimization", "pytorch", "transformers"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.40.0",
    "datasets>=2.14.0",
    "accelerate>=0.27.0",
    "peft>=0.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.4.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]

[project.scripts]
tpo = "tpo_torch.cli:main"

[project.urls]
Homepage = "https://github.com/Griffith-7/tpo-torch"
Repository = "https://github.com/Griffith-7/tpo-torch"
Issues = "https://github.com/Griffith-7/tpo-torch/issues"

[tool.setuptools.packages.find]
include = ["tpo_torch*"]
exclude = ["notebooks*", "examples*", "tests*", "benchmarks*", "docs*"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
